# daic-rs

./: .gitignore  AUTOCXX_MIGRATION.md  CORRECTIONS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AUTOCXX.md  PIPELINE_API_INTEGRATION.md  README.md  build.rs  camera_all_session.rrd  taskfile.yml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml
daic-sys/: Cargo.toml  build.rs  build.rs.bak
daic-sys/examples/: camera_max_resolution.rs  camera_multiple_outputs.rs  camera_output.rs  camera_raw.rs
daic-sys/src/: camera.rs  camera_bindings.rs  core_bindings.rs  device.rs  frame.rs  lib.rs  simple_test.rs  string_utils.rs
daic-sys/wrapper/: autocxx_wrapper.h  simple_test.h  wrapper.cpp  wrapper.h
dependency-test/: Cargo.toml  README.md
dependency-test/src/: main.rs
depthai-macros/: Cargo.toml  README.md
depthai-macros/src/: lib.rs
depthai-sys/: Cargo.toml  README.md  build.rs
depthai-sys/src/: lib.rs
depthai-sys/wrapper/: autocxx_wrapper.h  image_filters_stub.cpp  wrapper.cpp  wrapper.h
examples/: README.md  basic_pipeline.rs  camera.rs  camera_all.rs  camera_capture_stability_test.rs  camera_output.rs  composite_node.rs  dev_visualization.rs  host_node.rs  image_manip.rs  pipeline_creation.rs  pipeline_example.rs  pipeline_with_real_bindings.rs  rerun_host_node.rs  rgbd_rerun.rs  simple_test.rs  test_pipeline_creation.rs  threaded_host_node.rs  video_encoder.rs  video_encoder_rerun.rs
src/: calibration.rs  camera.rs  camera_info.rs  common.rs  device.rs  device_info.rs  encoded_frame.rs  error.rs  frame.rs  host_node.rs  image_align.rs  image_manip.rs  lib.rs  misc.rs  output.rs  pipeline.rs  pointcloud.rs  queue.rs  rerun_host_node.rs  rgbd.rs  stereo_depth.rs  threaded_host_node.rs  video_encoder.rs  visualization.rs  xlink.rs
src/pipeline/: builder.rs  data.rs  device_node.rs  node.rs  nodes.rs
src/pipeline/nodes/: camera.rs  depth.rs  input.rs  manip.rs  mono_camera.rs  neural_network.rs  output.rs
tests/: hdep_binding_tests.rs  hdep_tests.rs  hit_tests.rs  image_manip_api.rs  macro_concept.rs  pipeline_create_tests.rs  pipeline_introspection.rs
wrapper/: bindings.rs  wrapper.cpp  wrapper.h
