[package]
name = "depthai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
hit = [] # Hardware Integration Tests


[dependencies]
image = "0.25.9"
memmap2 = "0.9.9"
ndarray = "0.17.1"
depthai-sys = { path = "depthai-sys" }
imageproc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
autocxx.workspace = true

[dev-dependencies]
kornia = "0.1.9"
rerun = "0.27.3"

[[example]]
name = "pipeline_creation"
path = "examples/pipeline_creation.rs"

[[example]]
name = "rgbd_rerun"
path = "examples/rgbd_rerun.rs"

[[example]]
name = "camera"
path = "examples/camera.rs"

[workspace]
resolver = "3"
members = [
    ".",
    "./depthai-sys",
]

[workspace.package]
edition = "2024"
version = "3.2.1" # Should match depthai-core version
authors = ["Groupe CARVI Inc."]
license = "MIT"

[workspace.dependencies]
autocxx = "0.30.0"
cxx = "1.0.192"
autocxx-build = "0.30.0"
cxx-build = "1.0.192"