[package]
name = "depthai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["rerun"]
hit = [] # Hardware Integration Tests
rerun = ["dep:rerun", "dep:tokio", "dep:re_web_viewer_server"]


[dependencies]
image = "0.25.9"
memmap2 = "0.9.9"
ndarray = "0.17.1"
depthai-sys = { path = "depthai-sys" }
depthai-macros = { path = "depthai-macros" }
imageproc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
autocxx.workspace = true
rerun = { version = "0.27.3", default-features = false, features = ["sdk", "server", "web_viewer"], optional = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "net"], optional = true }
re_web_viewer_server = { version = "0.27.3", optional = true }

[dev-dependencies]
kornia = "0.1.9"

[[example]]
name = "pipeline_creation"
path = "examples/pipeline_creation.rs"

[[example]]
name = "rgbd_rerun"
path = "examples/rgbd_rerun.rs"
required-features = ["rerun"]

[[example]]
name = "camera"
path = "examples/camera.rs"

[[example]]
name = "threaded_host_node"
path = "examples/threaded_host_node.rs"

[[example]]
name = "host_node"
path = "examples/host_node.rs"

[[example]]
name = "rerun_host_node"
path = "examples/rerun_host_node.rs"
required-features = ["rerun"]

[workspace]
resolver = "3"
members = [
    ".",
    "./depthai-sys",
    "./depthai-macros",
]

[workspace.package]
edition = "2024"
version = "3.2.1" # Should match depthai-core version
authors = ["Groupe CARVI Inc."]
license = "MIT"

[workspace.dependencies]
autocxx = "0.30.0"
cxx = "1.0.192"
autocxx-build = "0.30.0"
cxx-build = "1.0.192"
