[package]
name = "depthai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
hit = [] # Hardware Integration Tests
rerun = ["dep:rerun", "dep:tokio", "dep:re_web_viewer_server"]

# DepthAI-Core version selection.
#
# Cargo feature names can't contain dots, so version selectors use `v3-2-1` to mean tag `v3.2.1`.
# If none are selected, `depthai-sys` uses `latest` (the default).
latest = ["depthai-sys/latest"]
v3-2-1 = ["depthai-sys/v3-2-1"]
v3-2-0 = ["depthai-sys/v3-2-0"]
v3-1-0 = ["depthai-sys/v3-1-0"]


[dependencies]
image = "0.25.9"
memmap2 = "0.9.9"
ndarray = "0.17.1"
# Include both `path` and `version` so local workspace builds use the path,
# while published crates will use the version on crates.io.
depthai-sys = { version = "0.1.0", path = "depthai-sys" }
depthai-macros = { version = "0.1.0", path = "depthai-macros" }
imageproc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
autocxx.workspace = true
rerun = { version = "0.27.3", default-features = false, features = ["sdk", "server", "web_viewer"], optional = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "net"], optional = true }
re_web_viewer_server = { version = "0.27.3", optional = true }

[dev-dependencies]
kornia = "0.1.9"

[[example]]
name = "pipeline_creation"
path = "examples/pipeline_creation.rs"

[[example]]
name = "rgbd_rerun"
path = "examples/rgbd_rerun.rs"
required-features = ["rerun"]

[[example]]
name = "camera"
path = "examples/camera.rs"

[[example]]
name = "image_manip"
path = "examples/image_manip.rs"
required-features = ["rerun"]

[[example]]
name = "threaded_host_node"
path = "examples/threaded_host_node.rs"

[[example]]
name = "host_node"
path = "examples/host_node.rs"

[[example]]
name = "rerun_host_node"
path = "examples/rerun_host_node.rs"
required-features = ["rerun"]

[[example]]
name = "video_encoder_rerun"
path = "examples/video_encoder_rerun.rs"
required-features = ["rerun"]

[[example]]
name = "video_encoder_rerun_h265"
path = "examples/video_encoder_rerun_h265.rs"
required-features = ["rerun"]

[workspace]
resolver = "3"
members = [
    ".",
    "./depthai-sys",
    "./depthai-macros",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Groupe CARVI Inc."]
license = "MIT"

[workspace.dependencies]
autocxx = "0.30.0"
cxx = "1.0.192"
autocxx-build = "0.30.0"
cxx-build = "1.0.192"
