[package]
name = "daic-sys"
version = "0.1.0"
edition = "2024"
links = "depthai-core"

[dependencies]
cxx.workspace = true
autocxx.workspace = true

[features]
force-binding-regeneration = []
default = ["force-binding-regeneration"]

[build-dependencies]
autocxx-build = "0.30.0"
cxx-build = "1.0.160"
cc = "1.2.29"
cmake = "0.1.54"
num_cpus = "1.17.0"
walkdir = "2.5.0"
once_cell = "1.21.3"
zip-extensions = "0.13.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
sevenz-rust2 = "0.20.0"
pkg-config = "0.3.32"
zip = "6.0.0"
