[package]
name = "depthai-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros used by the depthai crate."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/depthai-macros"
readme = "README.md"
keywords = ["depthai", "luxonis", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
include = [
	"Cargo.toml",
	"README.md",
	"src/**",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
