[package]
name = "depthai-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
links = "depthai-core"
description = "Low-level FFI crate that builds/links Luxonis DepthAI-Core v3 and exposes Rust bindings."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/depthai-sys"
readme = "README.md"
keywords = ["depthai", "luxonis", "ffi", "bindings"]
categories = ["api-bindings", "computer-vision"]
include = [
	"Cargo.toml",
	"README.md",
	"build.rs",
	"src/**",
	"wrapper/**",
	"scripts/**",
]

[dependencies]
cxx.workspace = true
autocxx.workspace = true

[features]
no-native = []
force-binding-regeneration = []
default = ["force-binding-regeneration"]

# DepthAI-Core version selection.
#
# These are read by `build.rs` via `CARGO_FEATURE_*` environment variables.
# Only one of these should be enabled at a time.
latest = []
v3-2-1 = []
v3-2-0 = []
v3-1-0 = []

[package.metadata.docs.rs]
# docs.rs builds have strict time/network constraints. Building DepthAI-Core from source can time out,
# so we build in `no-native` mode (bindings-only) for documentation.
no-default-features = true
features = ["no-native"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
autocxx-build.workspace = true
cxx-build.workspace = true
cc = "1.2.49"
cmake = "0.1.56"
num_cpus = "1.17.0"
walkdir = "2.5.0"
once_cell = "1.21.3"
zip-extensions = "0.13.0"
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
sevenz-rust2 = "0.20.0"
pkg-config = "0.3.32"
zip = "6.0.0"
